# convert_proto_struct

./: .editorconfig  CMakeLists.txt  README.en-US.md  README.en.md  README.md
src/: convert_proto_struct.cpp  convert_proto_struct.h
test/: main.cpp  message.h  message.proto
